# minigrad

./: CMakeLists.txt  README.md  build.sh
examples/: activation_demo.cpp  autograd_demo.cpp  classification_demo.cpp  linear_regression_train.cpp  matmul_test.cpp  mlp_demo.cpp  mnist_mlp.cpp  op_demo.cpp  shape_ops_test.cpp  xor.cpp
include/: dataset.h  layers.h  loss.h  mlp.h  module.h  ops.h  optim.h  tensor.h
src/: dataset.cpp  layers.cpp  loss.cpp  mlp.cpp  module.cpp  ops.cpp  optim.cpp  tensor.cpp
